ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "my.wordpress.com"
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: wordpress-service
              port: 
                number: 80
